--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root, html, body {
+    height:100vh;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    margin: 0;
+    background-color:whitesmoke;
+    background-image: url("https://cdn.vectorstock.com/i/1000x1000/13/24/purple-robot-floating-vector-42531324.webp");
+    background-size: 100%; 
+}
+*
+{
+    box-sizing: border-box;
+}
+html{
+    scroll-behavior: smooth;
+}
+h1{
+    font-family: fantasy;
+    font-size: 50px;
 }
